--- a/nosotros.html
+++ b/nosotros.html
@@ -17,12 +17,21 @@
         </nav>
     </header>
     <main>
-        <h2>Estamos Juntos</h2>
-        <h3>Porque se crea ATID - Retorno</h3>
-        <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se originó debido a la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con la falta de controles externos. La escasa comprensión y experiencia en la temática dentro de la comunidad judía ortodoxa impulsaron la creación de Atid - Retorno.</p>
+        <article>
+            <h3>Quienes somos</h3>
+            <p>Programa sin fines de lucro para para la prevención, acompañamiento y asistencia en consumos problemáticos y adicciones orientado a adolescentes y adultos de la comunidad judía datí</p>
+        </article>
+        <article>
+            <h3>Misión</h3>
+            <p>Generar comunidades libres de consumos</p>
+        </article>
+        <article>
+            <h3>Visión</h3>
+            <p>Ser la institución referente de la comunidad judía en el abordaje integral de la problemática de consumo y adiciones, logrando un espacio seguro de psicoeducación enmarcado en los valores de la Tora.</p>
+        </article>
     </main>
     <footer>
-        <p>Powered by Aimé Albornoz</p>
+        <p>Designed by Aimé Albornoz</p>
     </footer>
 </body>
 </html>
