--- a/contacto.html
+++ b/contacto.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header>
-        <img>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+        <div id="header-contain">
+            <img width="10px" height="10px">
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+        </div>
     </header>
     <main>
         <h2>Contactate con nosotros</h2>
