--- a/nosotros.html
+++ b/nosotros.html
@@ -9,23 +9,25 @@
 </head>
 <body>
     <header>
-        <img>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
+        <div id="header-contain">
+            <img width="10px" hdeight="10px">
+            <nav>
+                <a href="index.html">Inicio</a>
+                <a href="nosotros.html">Nosotros</a>
+                <a href="contacto.html">Contacto</a>
+            </nav>
+        </div>
     </header>
     <main>
-        <article>
+        <article class="about">
             <h3>Quienes somos</h3>
             <p>Programa sin fines de lucro para para la prevención, acompañamiento y asistencia en consumos problemáticos y adicciones orientado a adolescentes y adultos de la comunidad judía datí</p>
         </article>
-        <article>
+        <article class="about">
             <h3>Misión</h3>
-            <p>Generar comunidades libres de consumos</p>
+            <p>Generar comunidades libres de consumos problemáticos y adicciones.</p>
         </article>
-        <article>
+        <article class="about">
             <h3>Visión</h3>
             <p>Ser la institución referente de la comunidad judía en el abordaje integral de la problemática de consumo y adiciones, logrando un espacio seguro de psicoeducación enmarcado en los valores de la Tora.</p>
         </article>
