--- a/contacto.html
+++ b/contacto.html
@@ -19,25 +19,27 @@
         </div>
     </header>
     <main>
-        <h2>Contactate con nosotros</h2>
-        <p>Estamos para ayudar</p>
-        <ul>
+        <article>
+            <h2>Contactate con nosotros</h2>
+            <h4>Estamos para ayudar</h4>
+        </article>
+        <ul id="contacto">
             <li>
-                <img>
+                <img src="img/instagram.svg" width="50px" alt="Instagram">
                 <a>@AtidRetorno</a>
             </li>
             <li>
-                <img>
-                <a>Mail: Atidretorno@Ig: @AtidRetorno gmail.com</a>
+                <img src="img/mail.svg" width="50px" alt="E-Mail">
+                <a>Mail: Atidretorno@gmail.com</a>
             </li>
             <li>
-                <img>
+                <img src="img/whatsapp.svg" width="50px" alt="WhatsApp">
                 <a>11 5759-4901</a>
             </li>
         </ul>
     </main>
     <footer>
-        <p>Powered by Aimé Albornoz</p>
+        <p>Designed by Aimé Albornoz</p>
     </footer>
 </body>
 </html>
