completado de index y arreglos generales

--- a/contacto.html
+++ b/contacto.html
@@ -19,22 +19,22 @@
         </div>
     </header>
     <main>
-        <article>
+        <article id="title-contacto">
             <h2>Contactate con nosotros</h2>
             <h4>Estamos para ayudar</h4>
         </article>
         <ul id="contacto">
             <li>
                 <img src="img/instagram.svg" width="50px" alt="Instagram">
-                <a>@AtidRetorno</a>
+                <a href="#" target="_blank">@AtidRetorno</a>
             </li>
             <li>
                 <img src="img/mail.svg" width="50px" alt="E-Mail">
-                <a>Mail: Atidretorno@gmail.com</a>
+                <a href="mailto:atidretorno@gmail.com" target="_blank">atidretorno@gmail.com</a>
             </li>
             <li>
                 <img src="img/whatsapp.svg" width="50px" alt="WhatsApp">
-                <a>11 5759-4901</a>
+                <a href="#" target="_blank">11 5759-4901</a>
             </li>
         </ul>
     </main>
