--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>ATID Retorno</title>
     <meta name="viewport" content="width=device-width">
-    <link href="estilos.css" rel="stylesheet" type="text/css"/>
-	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link href="estilos.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
+
 <body>
     <header>
         <div id="header-contain">
@@ -19,14 +21,32 @@
         </div>
     </header>
     <main>
-        <article>
+        <section id="bienvenida">
             <h2>Estamos Juntos</h2>
             <h3>Porque se crea ATID - Retorno</h3>
-            <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se originó debido a la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con la falta de controles externos. La escasa comprensión y experiencia en la temática dentro de la comunidad judía ortodoxa impulsaron la creación de Atid - Retorno.</p>
-        </article>
+            <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en
+                adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se originó debido a
+                la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con
+                la falta de controles externos. La escasa comprensión y experiencia en la temática dentro de la
+                comunidad judía ortodoxa impulsaron la creación de Atid - Retorno.</p>
+        </section>
+        <section id="atid-activo">
+            <div id="galeria-miniaturas">
+                <img src="img/galeria-1-thumbnail.jpg">
+                <img src="img/galeria-2-thumbnail.jpg">
+                <img src="img/galeria-3-thumbnail.jpg">
+                <img src="img/galeria-4-thumbnail.jpg">
+            </div>
+            <article>
+                <h3>ATID está activo</h3>
+                <p>Mirá la fotos de las capacitaciones hacia los dirigentes de la comunidad</p>
+                <p id="link-atid-activo">PARA VER MÁS SEGUINOS EN INSTAGRAM! <a href="#" target="_blank">@AtidRetorno</a></p>
+            </article>
+        </section>
     </main>
     <footer>
         <p>Designed by Aimé Albornoz</p>
     </footer>
 </body>
+
 </html>
