primeras pruebas en mobile

--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
         </ul>
     </main>
     <footer>
-        <p>Designed by Aimé Albornoz</p>
+        <p>Designed by Aimé-FDG</p>
     </footer>
 </body>
 </html>
