--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>Designed by Aimé Albornoz</p>
+        <p>Designed by Aimé-FDG</p>
     </footer>
 </body>
 
