--- a/nosotros.html
+++ b/nosotros.html
@@ -33,7 +33,7 @@
         </article>
     </main>
     <footer>
-        <p>Designed by Aimé Albornoz</p>
+        <p>Designed by Aimé-FDG</p>
     </footer>
 </body>
 </html>
