--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="bienvenida">
             <h2>Estamos Juntos</h2>
-            <h3>Porque se crea ATID - Retorno</h3>
+            <h3>Porqué se crea ATID - Retorno</h3>
             <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en
                 adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se originó debido a
                 la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con
