favicon + agregar logo + position header

--- a/contacto.html
+++ b/contacto.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>ATID Retorno</title>
     <meta name="viewport" content="width=device-width">
     <link href="estilos.css" rel="stylesheet" type="text/css"/>
-	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="favicon.svg" type="image/x-icon"/>
 </head>
+
 <body>
     <header>
         <div id="header-contain">
-            <img width="10px" height="10px">
+            <img src="img/logo-atid.svg" width="300px" height="300px">
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
