--- a/nosotros.html
+++ b/nosotros.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
     <title>ATID Retorno</title>
     <meta name="viewport" content="width=device-width">
-    <link href="estilos.css" rel="stylesheet" type="text/css"/>
-	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link href="estilos.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
 </head>
+
 <body>
     <header>
         <div id="header-contain">
-            <img width="10px" hdeight="10px">
+            <img src="img/logo-atid.svg" width="200px" height="200px">
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
@@ -21,7 +23,8 @@
     <main>
         <article class="about">
             <h3>Quienes somos</h3>
-            <p>Programa sin fines de lucro para para la prevención, acompañamiento y asistencia en consumos problemáticos y adicciones orientado a adolescentes y adultos de la comunidad judía datí</p>
+            <p>Programa sin fines de lucro para para la prevención, acompañamiento y asistencia en consumos
+                problemáticos y adicciones orientado a adolescentes y adultos de la comunidad judía datí</p>
         </article>
         <article class="about">
             <h3>Misión</h3>
@@ -29,11 +32,13 @@
         </article>
         <article class="about">
             <h3>Visión</h3>
-            <p>Ser la institución referente de la comunidad judía en el abordaje integral de la problemática de consumo y adiciones, logrando un espacio seguro de psicoeducación enmarcado en los valores de la Tora.</p>
+            <p>Ser la institución referente de la comunidad judía en el abordaje integral de la problemática de consumo
+                y adiciones, logrando un espacio seguro de psicoeducación enmarcado en los valores de la Tora.</p>
         </article>
     </main>
     <footer>
         <p>Designed by Aimé-FDG</p>
     </footer>
 </body>
+
 </html>
