--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
         </ul>
     </main>
     <footer>
-        <p>Designed by Aimé-FDG</p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
     </footer>
 </body>
 </html>
