--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
         <section id="bienvenida">
             <h2>Estamos Juntos</h2>
             <h3>Porqué se crea ATID - Retorno</h3>
-            <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en
-                adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se originó debido a
-                la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con
-                la falta de controles externos. La escasa comprensión y experiencia en la temática dentro de la
-                comunidad judía ortodoxa impulsaron la creación de Atid - Retorno.</p>
+            <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se origin&oacute; debido a la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con la falta de controles externos. La escasa comprensi&oacute;n y experiencia en la tem&aacute;tica dentro de la comunidad judía ortodoxa impulsaron la creaci&oacute;n de Atid - Retorno.</p>
         </section>
         <section id="atid-activo">
             <div id="galeria-miniaturas">
@@ -38,14 +34,14 @@
                 <img src="img/galeria-4-thumbnail.jpg">
             </div>
             <article>
-                <h3>ATID está activo</h3>
-                <p>Mirá la fotos de las capacitaciones hacia los dirigentes de la comunidad</p>
-                <p id="link-atid-activo">PARA VER MÁS SEGUINOS EN INSTAGRAM! <a href="#" target="_blank">@AtidRetorno</a></p>
+                <h3>ATID est&aacute; activo</h3>
+                <p>Mir&aacute; la fotos de las capacitaciones hacia los dirigentes de la comunidad</p>
+                <p id="link-atid-activo">PARA VER M&Aacute;S SEGUINOS EN INSTAGRAM! <a href="#" target="_blank">@AtidRetorno</a></p>
             </article>
         </section>
     </main>
     <footer>
-        <p>Designed by Aimé-FDG</p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
     </footer>
 </body>
 
