--- a/nosotros.html
+++ b/nosotros.html
@@ -23,21 +23,19 @@
     <main>
         <article class="about">
             <h3>Quienes somos</h3>
-            <p>Programa sin fines de lucro para para la prevención, acompañamiento y asistencia en consumos
-                problemáticos y adicciones orientado a adolescentes y adultos de la comunidad judía datí</p>
+            <p>Programa sin fines de lucro para para la prevenci&oacute;n, acompañamiento y asistencia en consumos problem&aacute;ticos y adicciones orientado a adolescentes y adultos de la comunidad jud&iacute;a dat&iacute;</p>
         </article>
         <article class="about">
-            <h3>Misión</h3>
-            <p>Generar comunidades libres de consumos problemáticos y adicciones.</p>
+            <h3>Visi&oacute;n</h3>
+            <p>Ser la instituci&oacute;n referente de la comunidad jud&iacute;a en el abordaje integral de la problem&aacute;tica de consumo y adiciones, logrando un espacio seguro de psicoeducaci&oacute;n enmarcado en los valores de la Tor&aacute;.</p>
         </article>
         <article class="about">
-            <h3>Visión</h3>
-            <p>Ser la institución referente de la comunidad judía en el abordaje integral de la problemática de consumo
-                y adiciones, logrando un espacio seguro de psicoeducación enmarcado en los valores de la Tora.</p>
+            <h3>Misi&oacute;n</h3>
+            <p>Generar comunidades libres de consumos problem&aacute;ticos y adicciones.</p>
         </article>
     </main>
     <footer>
-        <p>Designed by Aimé-FDG</p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
     </footer>
 </body>
 
