arreglos mobile, footer y link de wsp

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 <body>
     <header>
         <div id="header-contain">
-            <img src="img/logo-atid.svg" width="300px" height="300px">
+            <img id="logo-desktop" src="img/logo-atid.svg" width="25%" height="25%">
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
+        <img id="logo-mobile" src="img/logo-atid.svg" width="300px" height="300px">
     </header>
     <main>
         <section id="bienvenida">
@@ -41,7 +42,7 @@
         </section>
     </main>
     <footer>
-        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">A-FDG</a></p>
     </footer>
 </body>
 
