--- a/nosotros.html
+++ b/nosotros.html
@@ -12,13 +12,14 @@
 <body>
     <header>
         <div id="header-contain">
-            <img src="img/logo-atid.svg" width="200px" height="200px">
+            <img id="logo-desktop" src="img/logo-atid.svg" width="200px" height="200px">
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
+        <img id="logo-mobile" src="img/logo-atid.svg" width="300px" height="300px">
     </header>
     <main>
         <article class="about">
@@ -35,7 +36,7 @@
         </article>
     </main>
     <footer>
-        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">A-FDG</a></p>
     </footer>
 </body>
 
