--- a/contacto.html
+++ b/contacto.html
@@ -12,13 +12,14 @@
 <body>
     <header>
         <div id="header-contain">
-            <img src="img/logo-atid.svg" width="300px" height="300px">
+            <img id="logo-desktop" src="img/logo-atid.svg" width="25%" height="25%">
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="nosotros.html">Nosotros</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
         </div>
+        <img id="logo-mobile" src="img/logo-atid.svg" width="300px" height="300px">
     </header>
     <main>
         <article id="title-contacto">
@@ -36,12 +37,12 @@
             </li>
             <li>
                 <img src="img/whatsapp.svg" width="50px" alt="WhatsApp">
-                <a href="#" target="_blank">11 5759-4901</a>
+                <a href="https://w.app/Atidretorno" target="_blank">11 5759-4901</a>
             </li>
         </ul>
     </main>
     <footer>
-        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">Aim&eacute;-FDG</a></p>
+        <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">A-FDG</a></p>
     </footer>
 </body>
 </html>
