ocultar link a instagram

--- a/contacto.html
+++ b/contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <title>ATID Retorno</title>
     <meta name="viewport" content="width=device-width">
-    <link href="estilos.css" rel="stylesheet" type="text/css"/>
-	<link rel="icon" href="favicon.svg" type="image/x-icon"/>
+    <link href="estilos.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
 </head>
 
 <body>
@@ -27,7 +27,7 @@
             <h4>Estamos para ayudar</h4>
         </article>
         <ul id="contacto">
-            <li>
+            <li style="display: none;">>
                 <img src="img/instagram.svg" width="50px" alt="Instagram">
                 <a href="#" target="_blank">@AtidRetorno</a>
             </li>
@@ -45,4 +45,5 @@
         <p>Designed by <a href="https://www.behance.net/aime-albornoz" target="_blank">A-FDG</a></p>
     </footer>
 </body>
+
 </html>
