--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
             </li>
             <li>
                 <img src="img/whatsapp.svg" width="50px" alt="WhatsApp">
-                <a href="https://wa.me/qr/57UMCCTMGC7TK1" target="_blank">11 5759-4901</a>
+                <a href="https://wa.me/message/FJVO2HMWGQMDA1" target="_blank">11 5759-4901</a>
             </li>
         </ul>
     </main>
