--- a/index.html
+++ b/index.html
@@ -5,42 +5,160 @@
     <meta charset="UTF-8" />
     <title>ATID Retorno</title>
     <meta name="viewport" content="width=device-width">
-    <link href="estilos.css" rel="stylesheet" type="text/css"/>
-    <link rel="icon" href="favicon.svg" type="image/x-icon"/>
+    <link href="estilos.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="favicon.svg" type="image/x-icon" />
 </head>
 
 <body>
+    <a id="whatsapp-flotante" href="https://wa.me/message/FJVO2HMWGQMDA1" target="_blank">
+        <img src="img/whatsapp-flotante.svg" alt="WhatsApp">
+    </a>
     <header>
         <div id="header-contain">
-            <img id="logo-desktop" src="img/logo-atid.svg" width="25%" height="25%">
+            <a>
+                <img id="logo-desktop" src="img/logo-atid.svg" width="auto" height="130px">
+                <p>Estamos juntos</p>
+            </a>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="nosotros.html">Nosotros</a>
-                <a href="contacto.html">Contacto</a>
+                <a href="#bienvenida">Inicio</a>
+                <a href="#nuestro-equipo">Nosotros</a>
+                <a href="#contacto">Contacto</a>
             </nav>
         </div>
         <img id="logo-mobile" src="img/logo-atid.svg" width="300px" height="300px">
     </header>
     <main>
         <section id="bienvenida">
-            <h2>Estamos Juntos</h2>
-            <h3>Porqué se crea ATID - Retorno</h3>
-            <p>Atid - Retorno surge como respuesta a la creciente presencia de situaciones de adicciones tanto en adolescentes como en adultos dentro de la comunidad judía ortodoxa. Esta iniciativa se origin&oacute; debido a la accesibilidad sin restricciones a sustancias y otras formas de consumo, como el juego, combinada con la falta de controles externos. La escasa comprensi&oacute;n y experiencia en la tem&aacute;tica dentro de la comunidad judía ortodoxa impulsaron la creaci&oacute;n de Atid - Retorno.</p>
+            <div>
+                <h2>Atid Retorno</h2>
+                <h3>¿Qué es?</h3>
+                <p>Es un <b>programa para la prevención, acompañamiento y asistencia</b> en consumos problemáticos y
+                    <b>adicciones</b> orientado a adolescentes y adultos de la comunidad <b>judía datí.</b>
+                </p>
+            </div>
+        </section>
+        <section id="about">
+            <div id="relleno-fondo">
+                <img src="img/bienvenida.svg" height="400px">
+            </div>
+            <div id="datos">
+                <article>
+                    <h3>Misi&oacute;n</h3>
+                    <p>Nuestra misión es generar <b>comunidades libres de consumos problemáticos y adicciones</b>
+                        trabajando fuertemente en prevención, detección temprana, promoción, atención y recuperación.
+                    </p>
+                </article>
+                <article>
+                    <h3>Visi&oacute;n</h3>
+                    <p><b>Ser la institución referente de la comunidad judía</b> en el abordaje integral de la
+                        problemática de consumo y <b>adicciones</b>, logrando crear un espacio <b>seguro</b> de
+                        acompañamiento y tratamiento <b>enmarcados en los valores de la Torá.</b></p>
+                </article>
+            </div>
+
+        </section>
+        <section id="origen">
+            <div>
+                <img src="img/creacion.svg" width="400px">
+                <article>
+                    <h3>¿Por qué se crea ATID - Retorno?</h3>
+                    <ul>
+                        <li>Aparición de situaciones de adicciones en adultos y adolescentes de la comunidad judía
+                            ortodoxa. </li>
+                        <li>Aparición de nuevos y diferentes consumos en adolescentes.</li>
+                        <li>Facilidad en el acceso a sustancias y otros consumos como el juego, pornografía etc. sin
+                            controles externos.</li>
+                        <li>Escaso conocimiento y experiencia en la temática y en el abordaje de la misma dentro de la
+                            comunidad judía–ortodoxa.</li>
+                    </ul>
+                </article>
+            </div>
         </section>
         <section id="atid-activo">
-            <div id="galeria-miniaturas">
-                <img src="img/galeria-1-thumbnail.jpg">
-                <img src="img/galeria-2-thumbnail.jpg">
-                <img src="img/galeria-3-thumbnail.jpg">
-                <img src="img/galeria-4-thumbnail.jpg">
-            </div>
             <article>
-                <h3>ATID est&aacute; activo</h3>
-                <p>Mir&aacute; la fotos de las capacitaciones hacia los dirigentes de la comunidad</p>
-                <p id="link-atid-activo">PARA VER M&Aacute;S SEGUINOS EN INSTAGRAM! <a href="#" target="_blank">@AtidRetorno</a></p>
+                <h4>ATID est&aacute; activo</h4>
+                <p>Mir&aacute; la fotos de las capacitaciones hacia los dirigentes de nuestras comunidades en nuestro
+                    instagram <a href="https://www.instagram.com/atidretorno/" target="_blank">@AtidRetorno</a></p>
             </article>
+            <div id="galeria-miniaturas">
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+            </div>
+        </section>
+        <section id="nuestro-equipo">
+            <h3>Nuestro Equipo</h3>
+            <ul>
+                <li>
+                    <h5>ASESORAMIENTO INTEGRAL</h5>
+                    <p>Rab Iosef Dlin</p>
+                    <p>Rab Iosef Meta</p>
+                    <p>Rab Eitan Ekstein-Retorno, Israel</p>
+                </li>
+                <li>
+                    <h5>CONSEJO ADMINISTRATIVO</h5>
+                    <p>Lic. Jimmy Yemal</p>
+                    <p>Sr. Martin Mijalevich</p>
+                    <p>Sr. Marcos Ohana</p>
+                    <p>Sr. Jose Mizrahi</p>
+                </li>
+                <li>
+                    <h5>EQUIPO TÉCNICO</h5>
+                    <p>Lic. Amiela Spektor </p>
+                    <p>Clor. Deborah Zeitune</p>
+                    <p>Lic. Camila Galante (Psicóloga)</p>
+                    <p>Sr. Jose Naem</p>
+                </li>
+                <li>
+                    <h5>ASESORAMIENTO MEDICO</h5>
+                    <p>Dr. Jorge Weil (Psiquiatra)</p>
+                </li>
+                <li>
+                    <h5>DIRECTORA GENERAL</h5>
+                    <p>Sra. Karina Yemal</p>
+                </li>
+                <li>
+                    <h5>DISEÑO Y COMUNICACIÓN</h5>
+                    <p>Esther Chami</p>
+                </li>
+            </ul>
+            <img src="img/equipo.svg" height="400px">
         </section>
     </main>
+    <footer id="contacto">
+        <div>
+            <h4>ESTAMOS <span>PARA AYUDAR</span></h4>
+            <h4>ESTAMOS <span>JUNTOS</span></h4>
+        </div>
+        <p>Contactate con nosotros ahora, desde el medio que más te convenga y en breve estaremos con vos!</p>
+        <ul>
+            <li>
+                <img src="img/ubicacion.svg" width="50px">
+                <a href="https://maps.app.goo.gl/VsnUjBEtWQbUqPgU8" target="_blank" style="
+                width: min-content;
+                min-width: 260px;
+            ">Riobamba 429 / Piso 11 / Of 1101
+                    Argentina, Buenos Aires CABA</a>
+            </li>
+            <li>
+                <img src="img/whatsapp.svg" width="50px">
+                <a href="https://wa.me/message/FJVO2HMWGQMDA1" target="_blank">11 5759-4901</a>
+            </li>
+            <li>
+                <img src="img/mail.svg" width="50px">
+                <a href="mailto:atidretorno@gmail.com" target="_blank">atidretorno@gmail.com</a>
+            </li>
+            <li>
+                <img src="img/instagram.svg" width="50px">
+                <a href="https://www.instagram.com/atidretorno/" target="_blank">@AtidRetorno</a>
+            </li>
+        </ul>
+    </footer>
+
 </body>
 
 </html>
