--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </section>
         <section id="origen">
             <div>
-                <img src="img/creacion.svg" width="400px">
+                <img src="img/creacion.svg">
                 <article>
                     <h3>¿Por qué se crea ATID - Retorno?</h3>
                     <ul>
@@ -138,10 +138,7 @@
         <ul>
             <li>
                 <img src="img/ubicacion.svg" width="50px">
-                <a href="https://maps.app.goo.gl/VsnUjBEtWQbUqPgU8" target="_blank" style="
-                width: min-content;
-                min-width: 260px;
-            ">Riobamba 429 / Piso 11 / Of 1101
+                <a id="direccion" href="https://maps.app.goo.gl/VsnUjBEtWQbUqPgU8" target="_blank">Riobamba 429 / Piso 11 / Of 1101
                     Argentina, Buenos Aires CABA</a>
             </li>
             <li>
