arreglo bullets y paddings responsive

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 <article>
                     <h3>¿Por qué se crea ATID - Retorno?</h3>
                     <ul>
-                        <li>Aparición de situaciones de adicciones en adultos y adolescentes de la comunidad judía
+                        <li><span class="bullet"></span>Aparición de situaciones de adicciones en adultos y adolescentes de la comunidad judía
                             ortodoxa. </li>
-                        <li>Aparición de nuevos y diferentes consumos en adolescentes.</li>
-                        <li>Facilidad en el acceso a sustancias y otros consumos como el juego, pornografía etc. sin
+                        <li><span class="bullet"></span>Aparición de nuevos y diferentes consumos en adolescentes.</li>
+                        <li><span class="bullet"></span>Facilidad en el acceso a sustancias y otros consumos como el juego, pornografía etc. sin
                             controles externos.</li>
-                        <li>Escaso conocimiento y experiencia en la temática y en el abordaje de la misma dentro de la
+                        <li><span class="bullet"></span>Escaso conocimiento y experiencia en la temática y en el abordaje de la misma dentro de la
                             comunidad judía–ortodoxa.</li>
                     </ul>
                 </article>
