--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </li>
             <li>
                 <img src="img/mail.svg" width="50px">
-                <a href="mailto:atidretorno@gmail.com" target="_blank">atidretorno@gmail.com</a>
+                <a href="mailto:estamosjuntos@atidretorno.ar" target="_blank">estamosjuntos@atidretorno.ar</a>
             </li>
             <li>
                 <img src="img/instagram.svg" width="50px">
