--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
         <section id="atid-activo">
             <article>
                 <h4>ATID est&aacute; activo</h4>
-                <p>Mir&aacute; la fotos de las capacitaciones hacia los dirigentes de nuestras comunidades en nuestro
-                    instagram <a href="https://www.instagram.com/atidretorno/" target="_blank">@AtidRetorno</a></p>
+                <p>Mir&aacute; la fotos de las capacitaciones hacia los dirigentes de nuestras comunidades.</p>
             </article>
             <div id="galeria-miniaturas">
                 <div class="foto"></div>
@@ -148,10 +147,6 @@
             <li>
                 <img src="img/mail.svg" width="50px">
                 <a href="mailto:atidretorno@gmail.com" target="_blank">atidretorno@gmail.com</a>
-            </li>
-            <li>
-                <img src="img/instagram.svg" width="50px">
-                <a href="https://www.instagram.com/atidretorno/" target="_blank">@AtidRetorno</a>
             </li>
         </ul>
     </footer>
